--- a/layouts/default.html
+++ b/layouts/default.html
@@ -17,6 +17,8 @@
     <link href="/css/font-awesome.min.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
 
+    <meta name="generator" content="Nanoc <%= Nanoc::VERSION %>">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
