Added English version of the site

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -44,10 +44,10 @@
             </a>
             <ul class='sidebar-nav'>
                 <li>
-                    <a href="/">Work</a>
+                    <a href="/<%= lang_code(@item) %>">Work</a>
                 </li>
                 <li>
-                    <a href="/about/">About me</a>
+                    <a href="/<%= lang_code(@item) %>/about/">About me</a>
                 </li>
             </ul>
             <p class="email">
