add design page

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -44,7 +44,10 @@
             </a>
             <ul class='sidebar-nav'>
                 <li>
-                    <a href="/<%= lang_code(@item) %>">Work</a>
+                    <a href="/<%= lang_code(@item) %>">Architecture</a>
+                </li>
+                <li>
+                    <a href="/<%= lang_code(@item) %>/design/">Design</a>
                 </li>
                 <li>
                     <a href="/<%= lang_code(@item) %>/about/">About me</a>
